--- a/index.html
+++ b/index.html
@@ -172,6 +172,19 @@
                                         </h3>
                                         <div id="aesthetic" class="collapse">
                                             <li class="list-group-item">
+                                                <label>data-url1="/mcpack/resource/texts/.DS_Store"
+data-folder1="texts"
+data-url2="/mcpack/resource/texts/en_US.lang"
+data-folder2="texts"
+data-url3="/mcpack/resource/textures/.DS_Store"
+data-folder3="textures"
+data-url4="/mcpack/resource/textures/entity/minecart.png"
+data-folder4="textures/entity"
+data-url5="/mcpack/resource/textures/items/minecart_chest.png"
+data-folder5="textures/items"
+data-url6="/mcpack/resource/textures/items/minecart_hopper.png"
+data-folder6="textures/items"
+data-url7="/mcpack/resource/textures/items/minecart_normal.png"
                                                 <label>
                                                     <input type="checkbox" id="BlackNetherBricks"
                                                         data-modulename="Black Nether Bricks" data-amount=4
